ds-internal-traefik.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  creationTimestamp: 2018-11-20T12:21:59Z
  generation: 1
  labels:
    k8s-app: traefik-ingress-lb-internal
  name: ds-internal-traefik
  namespace: kube-system
  resourceVersion: "3470660"
  selfLink: /apis/extensions/v1beta1/namespaces/kube-system/daemonsets/ds-internal-traefik
  uid: e09d286d-ecbe-11e8-afd0-005056880c0c
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb-internal
      name: traefik-ingress-lb-internal
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: traefik-ingress-lb-internal
        name: traefik-ingress-lb-internal
    spec:
      containers:
      - args:
        - --logLevel=INFO
        - --configfile=/config/traefik.toml
        image: traefik
        imagePullPolicy: IfNotPresent
        name: traefik-ingress-lb
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: admin
          protocol: TCP
        resources: {}
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: cm-internal-traefik
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: sa-internal-traefik
      serviceAccountName: sa-internal-traefik
      terminationGracePeriodSeconds: 60
      volumes:
      - configMap:
          defaultMode: 420
          name: cm-internal-traefik
        name: cm-internal-traefik
  templateGeneration: 1
  updateStrategy:
    type: OnDelete
status:
  currentNumberScheduled: 2
  desiredNumberScheduled: 2
  numberAvailable: 2
  numberMisscheduled: 0
  numberReady: 2
  observedGeneration: 1
  updatedNumberScheduled: 2
